fix dark mode

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -3008,7 +3008,7 @@ body:is(html[class~="dark"] *) {
 }
 .dark\:hx-text-gray-400:is(html[class~="dark"] *) {
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+  color: rgb(156 163 175 / var(--tw-text-opacity)) !important;
 }
 .dark\:hx-text-gray-50:is(html[class~="dark"] *) {
   --tw-text-opacity: 1;
